fix stats invisible

--- a/css/style.css
+++ b/css/style.css
@@ -40,5 +40,7 @@ canvas {
 }
 
 .stats {
+	position: absolute;
+	z-index: 1;
 	color: #fff5;
 }
